static/css/front_page.css
.maingrid-container {
    display: grid;
    grid-auto-columns: minmax(0, 1fr);
    grid-gap: 15px;
    align-items: stretch;
    grid-template-areas:
        "main-article main-article welcome"
        "upcoming-events-1 upcoming-events-2 office"
        "latest-nablad    latest-podcast   poll"
        "more-news-1      more-news-2       social"
        "more-news-3      more-news-4      more-news-5"
        "more-news-btn    more-news-btn    more-news-btn"
        "sponsors         sponsors         suggestions";
}

.maingrid-container-authenticated {
    display: grid;
    grid-auto-columns: minmax(0, 1fr);
    grid-gap: 15px;
    align-items: stretch;
    grid-template-areas:
        "main-article main-article main-article"
        /*"title-a        title-b                title-o"*/
        "upcoming-events-1 upcoming-events-2 office"
        "latest-podcast  latest-nablad    poll"
        "more-news-1   more-news-2  social"
        "more-news-3     more-news-4    more-news-5"
        "more-news-btn   more-news-btn   more-news-btn"
        "sponsors        sponsors        suggestions";
}

@media (max-width: 1000px) {
    .maingrid-container {
        grid-template-columns: 1fr;
        grid-template-areas:
        "welcome"
        "upcoming-events-1"
        "upcoming-events-2"
        "office"
        "latest-nablad"
        "latest-podcast"
        "poll"
        "main-article"
        "more-news-1"
        "more-news-2"
        "more-news-3"
        "suggestions"
        "sponsors";
    }

    .maingrid-container-authenticated {
        grid-template-columns: 1fr;
        grid-template-areas:
        "upcoming-events-1"
        "upcoming-events-2"
        "office"
        "poll"
        "latest-nablad"
        "latest-podcast"
        "main-article"
        "more-news-1"
        "more-news-2"
        "more-news-3"
        "suggestions"
        "sponsors";
    }

    .more-news-4 {
        display: none
    }

    .more-news-5 {
        display: none
    }

    .more-news-6 {
        display: none
    }

    .more-news-btn {
        display: none
    }

    .suggestions {
        display: none
    }
}


.well {
    margin-bottom: 0px;
}

.main-article {
    align-self: stretch;
    margin: 0;
    grid-area: main-article;
}

.more-news-1 {
    grid-area: more-news-1;
}

.more-news-2 {
    grid-area: more-news-2;
}

.more-news-3 {
    grid-area: more-news-3;
}

.more-news-4 {
    grid-area: more-news-4;
}

.more-news-5 {
    grid-area: more-news-5;
}

.more-news-6 {
    grid-area: more-news-6;
}

.forum {
    grid-area: forum;

}

.more-news-btn {
    grid-area: more-news-btn;
    grid-gap: 0;
}

.welcome {
    grid-area: welcome;
}

.upcoming-events {
    grid-area: upcoming-events;
}

.office {
    grid-area: office;
}

.poll {
    grid-area: poll;
}

.latest-podcast {
    grid-area: latest-podcast;
}

.latest-nablad {
    grid-area: latest-nablad;
}

.sponsors {
    grid-area: sponsors;
}

.suggestions {
    grid-area: suggestions;
}

.nabla-media-img {
    height: 365px;
}

.nabla-frontpage-header {
    color: var(--nabla-blue-alt);
}

h5.nabla-frontpage-header {
    padding-left: 0.25rem;
    padding-top: .5rem;
    margin-bottom: 0.25rem;
}

